document handler/force-app/main/default/objects/Document_Checklist__c/Document_Checklist__c.object-meta.xml
<CustomObject>
    <label>Document Checklist</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>