document handler/force-app/main/default/objects/Document_Checklist__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Document Checklists</relationshipLabel>
    <relationshipName>Document_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>