document handler/force-app/main/default/objects/Document_Checklist__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Document category - used primarily for reporting</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Photo</fullName>
            </value>
            <value>
                <fullName>Consent Documents</fullName>
            </value>
            <value>
                <fullName>Business Proof Documents</fullName>
            </value>
            <value>
                <fullName>Customer Profile Documents</fullName>
            </value>
            <value>
                <fullName>FD Documents</fullName>
            </value>
            <value>
                <fullName>Other Documents</fullName>
            </value>
            <value>
                <fullName>Insurance Documents</fullName>
            </value>
            <value>
                <fullName>Property Documents</fullName>
                <isActive>false</isActive>
                <label>Property Documents</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>