document handler/force-app/main/default/objects/Document_Checklist__c/fields/Checklist_ID__c.field-meta.xml
<CustomField>
    <fullName>Checklist_ID__c</fullName>
    <description>Used for document upload from CRMNext</description>
    <displayFormat>DOC-{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Checklist ID</label>
    <type>AutoNumber</type>
</CustomField>