document handler/force-app/main/default/objects/Document_Checklist__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>application/pdf</fullName>
            </value>
            <value>
                <fullName>image/jpeg</fullName>
            </value>
            <value>
                <fullName>image/png</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>PDf</fullName>
            </value>
            <value>
                <fullName>Doc</fullName>
            </value>
            <value>
                <fullName>text/html</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
                <isActive>false</isActive>
                <label>Text</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>