document handler/force-app/main/default/objects/Document_Checklist__c/fields/CPC_Remarks__c.field-meta.xml
<CustomField>
    <fullName>CPC_Remarks__c</fullName>
    <description>This field is used to store the CPC remarks about the document</description>
    <label>CPC Remarks</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>