document handler/force-app/main/default/objects/Document_Checklist__c/fields/Document_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Expiry_Date__c</fullName>
    <description>Holds the expiry date of a document.</description>
    <label>Document Expiry Date</label>
    <type>Date</type>
</CustomField>