document handler/force-app/main/default/objects/Document_Checklist__c/fields/Integration_Stage_Message__c.field-meta.xml
<CustomField>
    <fullName>Integration_Stage_Message__c</fullName>
    <description>This field used as a backed field to store the response in case of failure</description>
    <label>Integration Stage Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>