document handler/force-app/main/default/objects/Document_Checklist__c/fields/Received__c.field-meta.xml
<CustomField>
    <fullName>Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a document is received. Read only for end user and is automatically populated via content document triggers</description>
    <label>Received?</label>
    <type>Checkbox</type>
</CustomField>