document handler/force-app/main/default/objects/Document_Checklist__c/fields/Related_Document_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Related_Document_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To store Related Document Checklist for Branch Ops</description>
    <label>Related Document Checklist</label>
    <referenceTo>Document_Checklist__c</referenceTo>
    <relationshipLabel>Document Checklists</relationshipLabel>
    <relationshipName>Document_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>