document handler/force-app/main/default/objects/Document_Checklist__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>Provision for end user to enter any remarks about the document</description>
    <label>Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>