document handler/force-app/main/default/objects/Document_Checklist__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>Editable subcategory for user to enter the sub-category of the document. This is only available when sub-category is not copied from masters</description>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer Photo</fullName>
            </value>
            <value>
                <fullName>Additional Address Proof</fullName>
            </value>
            <value>
                <fullName>DOB Proof</fullName>
            </value>
            <value>
                <fullName>Name &amp; Address Undertaking</fullName>
            </value>
            <value>
                <fullName>Bureau Report</fullName>
            </value>
            <value>
                <fullName>OHP</fullName>
            </value>
            <value>
                <fullName>Attachment Letter</fullName>
            </value>
            <value>
                <fullName>MLS Form</fullName>
            </value>
            <value>
                <fullName>MAS Form</fullName>
            </value>
            <value>
                <fullName>Signature Verification proof</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>RC Copy</fullName>
            </value>
            <value>
                <fullName>Consent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>