document handler/force-app/main/default/objects/Document_Checklist__c/fields/View_Document__c.field-meta.xml
<CustomField>
    <fullName>View_Document__c</fullName>
    <formula>IF( Received__c, If(ISPickval(Content_Type__c,&apos;text/html&apos;), HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;apex/DocumentViewerHtmlPage?id=&apos;+Id,&quot;Click Here&quot;,&quot;_blank&quot;), HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;apex/DocumentViewer?recordId=&apos;+Id,&quot;Click Here&quot;,&quot;_blank&quot;)),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Document</label>
    <type>Text</type>
</CustomField>